--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/local-auth": "^2.1.0",
     "ajax": "^0.0.4",
     "browserify": "^17.0.0",
+    "emoji-regex": "^10.3.0",
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
     "mime-types": "^2.1.35"
