--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
     "ajax": "^0.0.4",
+    "axios": "^1.6.7",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
     "mime-types": "^2.1.35",
