--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,8 @@
     "undici": "*",
     "vite": "^5.2.10",
     "vite-tsconfig-paths": "^4.2.1"
+  },
+  "dependencies": {
+    "concurrently": "^8.2.2"
   }
 }
